@@ -1,5 +1,6 @@
 2015-03-19 Konstas Marmatakis marmako@gmail.com
 	* tkbak.py: License and Credits windows don't block the main application.
+	* tkbak.py: Added iformation from files in zip and tar file (Modification, Size Compressed, Side Uncompressed, CRC).
 
 2014-05-21 Konstas Marmatakis marmako@gmail.com
 	* tkbak.py: Minor bugfixes and improvements.
